<resources>
    <string name="app_name">OpenTracker</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_desc">Header Description</string>
    <string name="nav_header_title">Header Title</string>
    <string name="nav_header_subtitle">Header Subtitle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_option_show_search_result_list">Search Results List</string>
    <string name="menu_option_activities">Activities</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_search">Search</string>
    <string name="menu_option_login">Login</string>
    <string name="menu_option_logout">Logout</string>


    <string name="title_add_new_activity">Add New Activity</string>
    <string name="title_activities_list">Activities List</string>

    <string name="input_activity_name">Activity Name</string>
    <string name="input_description">Activity Description</string>

    <string name="display_location_name">Location Name</string>
    <string name="display_activity_name">Activity Name</string>
    <string name="display_activity_description">Activity Description</string>

    <string name="display_menu_edit">Edit</string>
    <string name="display_menu_delete">Delete</string>

    <string name="map_location_name">Location Name</string>
    <string name="map_location_description">Location Description</string>
    <string name="map_location_click_to_set_location">Click To Set As Location</string>
    <string name="map_current_selected_location">Currently Selected Location</string>

    <string name="toast_no_location_set">No Location Set, Add One Manually</string>
    <string name="toast_location_updated">Location Updated</string>
    <string name="toast_location_set_manually">Location Set Manually</string>
    <string name="toast_updating_location">Updating Location</string>
    <string name="toast_nothing_to_search">Nothing to search :(</string>
    <string name="toast_gps_not_on">No Location Set. Turn on GPS or click on the map.</string>
    <string name="toast_gps_must_be_enabled">GPS Must Be Enabled To Update Location.</string>
    <string name="toast_item_deleted">Item Deleted</string>
    <string name="toast_activity_updated">Activity Updated</string>
    <string name="toast_activity_created">Activity Created</string>

</resources>
