<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_goto_activities"
        android:orderInCategory="100"
        android:title="@string/menu_option_activities"/>
    <item
        android:id="@+id/acount_login"
        android:orderInCategory="200"
        android:title="@string/menu_option_login"/>
    <item
        android:id="@+id/acount_logout"
        android:orderInCategory="200"
        android:title="@string/menu_option_logout"/>
    <item
        android:id="@+id/menu_search"
        android:title="Search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"/>
</menu>