<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/locationNameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/map_location_name"
        android:textStyle="bold"
        android:textSize="19dp" />
    <TextView
        android:id="@+id/locationDescriptionText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/map_location_description"
        android:textSize="16dp"
        android:layout_below="@+id/locationNameText"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/map_location_click_to_set_location"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/locationDescriptionText"/>
</RelativeLayout>