<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addActivityLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/activity_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:ems="10"
        android:inputType="text"
        android:layout_margin="8dp"
        android:hint="@string/input_activity_name" />

    <EditText
        android:id="@+id/activity_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_name_input"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_margin="8dp"
        android:hint="@string/input_description" />

    <TextView
        android:id="@+id/locationNameDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_description_input"
        android:layout_marginTop="13dp"
        android:padding="5dp"
        android:text="@string/display_location_name"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save" />

</RelativeLayout>